# steer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
conversions/: COMPARISON.md  README.md
conversions/compare/: behavior.py  metrics.py
conversions/compare/fixtures/: chatty_server.py  dev_server.py  failing_server.py
conversions/humanizer/: SKILL.md  flow.toml
conversions/humanizer/references/: voice-calibration.md
conversions/systematic-debugging/: SKILL.md
conversions/vercel-cli-with-tokens/: SKILL.md
conversions/vercel-cli-with-tokens/references/: troubleshooting.md
docs/: README.md  docs.json  introduction.mdx  package.json  pnpm-lock.yaml  proxy.ts  quickstart.mdx
docs/app/: layout.tsx
docs/app/(home)/: layout.tsx  page.tsx
docs/components/: context.mdx  learn.mdx  logo.tsx  mdx.tsx  proc.mdx  see-it-run.tsx  store.mdx
docs/content/docs/: introduction.mdx  meta.json  quickstart.mdx
docs/guides/: authoring.mdx
docs/lib/: layout.shared.tsx  shared.ts
examples/: README.md
examples/commit-message/: SKILL.md
examples/commit-message/references/: conventional-commits.md
examples/conversions/: COMPARISON.md  README.md
examples/conversions/compare/: behavior.py  metrics.py
examples/conversions/humanizer/: NOTICE.md  flow.toml
examples/conversions/webapp-testing/: NOTICE.md  (+1 more)
examples/rebuilds/: COMPARISON.md  README.md
examples/repo-health/: SKILL.md  flow.toml
skills/: README.md
skills/building-skills/: SKILL.md  flow.toml
skills/converting-skills/: SKILL.md  flow.toml  learnings.md
steer/: __init__.py  cli.py  cli_context.py  cli_flow.py  cli_learn.py  cli_proc.py  cli_secrets.py  cli_store.py  context.py  create.py  distribute.py  flow.py  frontmatter.py  learn.py  output.py  paths.py  proc.py  renderer.py  runtime_cli.py  scaffold.py  secrets.py  skill.py  store.py  validate.py  vendor.py
tests/: helpers.py  test_cli_lifecycle.py  test_context_proc.py  test_flow.py  test_frontmatter.py  test_learn.py  test_secrets_store.py  test_validate.py  test_vendor.py
(+43 files in other folders)
