[project]
name = "steer-ai"
version = "0.1.1"
description = "The framework for building Agent Skills: scaffolding, validation, packaging, and runtime components (secrets, storage, context, flows, processes, learning) for SKILL.md"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Bharat Geleda", email = "bharatgeleda@gmail.com"}]
keywords = ["agent-skills", "skills", "claude", "agents", "SKILL.md", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bh-rat/steer"
Documentation = "https://github.com/bh-rat/steer#readme"
Changelog = "https://github.com/bh-rat/steer/blob/main/CHANGELOG.md"
Issues = "https://github.com/bh-rat/steer/issues"

[project.scripts]
steer = "steer.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["steer"]

[tool.hatch.build.targets.sdist]
# Allowlist: local working material next to the repo must never ship.
only-include = [
    "steer", "tests", "examples", "skills",
    "README.md", "CHANGELOG.md", "LICENSE", "CONTRIBUTING.md", "SECURITY.md",
]

[tool.hatch.build]
exclude = ["**/.DS_Store", "**/__pycache__"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored third-party reference files keep their original bytes.
extend-exclude = ["examples/rebuilds/*/references"]

[tool.ruff.lint]
# E4/E7/E9 + F: import, statement, and runtime-error classes; keep style opinions out.
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
